--- a/app/globals.css
+++ b/app/globals.css
@@ -38,4 +38,8 @@ body {
   .title-with-action {
     @apply flex flex-col justify-between gap-4 md:flex-row md:items-center;
   }
+
+  .section-layout {
+    @apply flex w-full flex-col gap-8 py-12 sm:py-16 md:py-24;
+  }
 }
